--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,7 @@
   "Главная меню": "Main",
   "О сайте меню": "About",
   "Язык": "English",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Something errors",
+  "Обновить страницу": "Reload page"
 }
