--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Язык": "English",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something errors",
-  "Обновить страницу": "Reload page"
+  "Обновить страницу": "Reload page",
+  "Кнопка меню": "Button menu"
 }
