--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something errors",
   "Обновить страницу": "Reload page",
-  "Кнопка меню": "Button menu"
+  "Кнопка меню": "Button menu",
+  "Короткий язык": "En"
 }
