added redux, component Counter

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "Произошла непредвиденная ошибка": "Something errors",
   "Обновить страницу": "Reload page",
   "Кнопка меню": "Button menu",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "increment": "increment",
+  "decrement": "decrement"
 }
