--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "Кнопка меню": "Кнопка меню",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "increment": "increment",
+  "decrement": "decrement"
 }
