--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
   "Кнопка меню": "Кнопка меню",
   "Короткий язык": "Ru",
   "increment": "increment",
-  "decrement": "decrement"
+  "decrement": "decrement",
+  "Войти": "Войти"
 }
