--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,10 @@
   "Короткий язык": "Ru",
   "increment": "increment",
   "decrement": "decrement",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Выйти": "Выйти",
+  "Форма авторизации": "Форма авторизации",
+  "Логин": "Логин",
+  "Пароль": "Пароль"
 }
