Добавлена страница Profile

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,6 @@
   "Выйти": "Logout",
   "Форма авторизации": "Form authorization",
   "Логин": "Login",
-  "Пароль": "Password"
+  "Пароль": "Password",
+  "Профиль": "Profile"
 }
