--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,6 @@
   "Выйти": "Выйти",
   "Форма авторизации": "Форма авторизации",
   "Логин": "Логин",
-  "Пароль": "Пароль"
+  "Пароль": "Пароль",
+  "Профиль": "Профиль"
 }
