--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,5 +2,6 @@
   "Профиль": "Profile",
   "Редактировать": "Edit",
   "Ваше имя": "Your name",
-  "Ваша фамилия": "Your surname"
+  "Ваша фамилия": "Your surname",
+  "Отменить": "Cancel"
 }
