--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,6 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия"
+  "Ваша фамилия": "Ваша фамилия",
+  "Отменить": "Отменить"
 }
