Добавлен компонент Select, доступ к страницам

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "Форма авторизации": "Form authorization",
   "Логин": "Login",
   "Пароль": "Password",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "Укажите валюту": "Selected wallet"
 }
