--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
   "Форма авторизации": "Форма авторизации",
   "Логин": "Логин",
   "Пароль": "Пароль",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Укажите валюту": "Укажите валюту"
 }
