--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -3,5 +3,11 @@
   "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
   "Ваша фамилия": "Ваша фамилия",
-  "Отменить": "Отменить"
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Данные не указаны": "Данные не указаны"
 }
