Добавлен компонент articleDetails

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
   "Логин": "Login",
   "Пароль": "Password",
   "Профиль": "Profile",
-  "Укажите валюту": "Selected wallet"
+  "Укажите валюту": "Selected wallet",
+  "Копировать": "Copy"
 }
