--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Логин": "Логин",
   "Пароль": "Пароль",
   "Профиль": "Профиль",
-  "Укажите валюту": "Укажите валюту"
+  "Укажите валюту": "Укажите валюту",
+  "Копировать": "Копировать"
 }
