--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,9 @@
   "Пароль": "Пароль",
   "Профиль": "Профиль",
   "Укажите валюту": "Укажите валюту",
-  "Копировать": "Копировать"
+  "Копировать": "Копировать",
+  "{{count}} просмотров_zero": "{{count}}  просмотров",
+  "{{count}} просмотров_one": "{{count}}  просмотр",
+  "{{count}} просмотров_few": "{{count}}  просмотра",
+  "{{count}} просмотров_manu": "{{count}}  просмотров"
 }
